# fhgr-mrproj2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/workflows/: CI.yml
cmake/: Findpigpio.cmake
smt_3D_files/: README.md
smt_3D_files/Fusion-files/: smt_model_gazebo.f3d
smt_3D_files/STEP-files/: smt_model_gazebo.step
smt_PCB_files/: README.md  README.txt  smt_PCB.json  smt_electrical_schematic.json
smt_camera_controller/: CMakeLists.txt  README.md  package.xml
smt_camera_controller/cmake/: Findraspicam.cmake
smt_camera_controller/config/: default.yaml  default_parameters.yaml
smt_camera_controller/include/smt_camera_controller/: camera_controller.hpp  smt_camera_controller.hpp
smt_camera_controller/launch/: camera_controller.launch  smt_camera_controller.launch
smt_camera_controller/src/: camera_controller.cpp  smt_camera_controller.cpp  smt_camera_controller_node.cpp
smt_controller/: CMakeLists.txt  package.xml
smt_controller/config/: default.yaml
smt_controller/include/: PathFinder.hpp  SmtController.hpp
smt_controller/src/: PathFinder.cpp  SmtController.cpp  smt_controller_node.cpp
smt_gpio_controller/: CMakeLists.txt  README.md  package.xml
smt_gpio_controller/config/: default.yaml
smt_gpio_controller/launch/: gpio_controller.launch
smt_gpio_controller/msg/: gpio.msg
smt_gpio_controller/src/: gpio_controller.cpp  smt_gpio_controller_node.cpp
smt_gun_controller/: CMakeLists.txt  README.md  package.xml
smt_gun_controller/config/: default.yaml
smt_gun_controller/launch/: default.launch  gun_controller.launch
smt_gun_controller/src/: gpio_controller.cpp  gun_controller.cpp  smt_gun_controller_node.cpp
smt_launch_common/: CMakeLists.txt  package.xml
smt_launch_gazebo/: CMakeLists.txt  README.md  package.xml
smt_launch_hardware/: CMakeLists.txt  README.md  package.xml
smt_launch_remote_control/: CMakeLists.txt  README.md  package.xml
smt_model_description/: CMakeLists.txt  README.md  package.xml
smt_movement_controller/: CMakeLists.txt  README.md  package.xml
smt_msgs/: CMakeLists.txt  README.md  package.xml
smt_qr_controller/: CMakeLists.txt  README.md  package.xml
smt_qr_detection/: CMakeLists.txt  package.xml
smt_qr_finder/: CMakeLists.txt  README.md  package.xml
smt_qr_msgs/: CMakeLists.txt  package.xml
smt_slam/: CMakeLists.txt  README.md  package.xml
smt_svcs/: CMakeLists.txt  README.md  package.xml
smt_video_recorder/: CMakeLists.txt  package.xml
(+58 files in other folders)
